--- a/cart.html
+++ b/cart.html
@@ -149,7 +149,7 @@
                         </form>
                     </div>
                     
-                    <div class="single-sidebar">
+                    <div class="single-sidebar products">
                         <h2 class="sidebar-title">Products</h2>
                         <div class="thubmnail-recent">
                             <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
